--- a/app/src/main/res/layout/activity_experience_detail.xml
+++ b/app/src/main/res/layout/activity_experience_detail.xml
@@ -32,10 +32,10 @@
                 android:textAlignment="center"
                 android:textColor="@color/backgroundcolor"
                 android:textSize="22sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:layout_marginBottom="20dp"/>
 
            <androidx.cardview.widget.CardView
-               android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="8dp"
